# lantern

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  NOTICE  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci-pipeline.yaml
lantern/: __init__.py  _compat.py
lantern/administration_procedures/: AI_OPERATOR_INVOCATION_TEMPLATES_v0.2.0.md  AI_OPERATOR_INVOCATION_TEMPLATES_v0.2.1.md  GT-030__DIP_LOCK_ADMINISTRATION_v0.1.0.md  GT-050_GT-060__BASELINE_READINESS_ADMINISTRATION_v0.1.0.md  GT-115__DESIGN_BASELINE_SELECTION_v0.1.0.md  GT-120__CI_SELECTION_ADMINISTRATION_v0.2.1.md  GT-130__INTEGRATION_VERIFICATION_ADMINISTRATION.md  GT-130__INTEGRATION_VERIFICATION_ADMINISTRATION_v0.1.0.md  INITIATIVE__AUTHORING_AND_READYING_v0.1.0.md  INITIATIVE__DECOMPOSITION_AND_CH_SIZING_v0.1.0.md  ISSUE__INTAKE_TRIAGE_RESOLUTION_v0.2.0.md  SSOT_BLOB_INGESTION_v0.2.0.md
lantern/artifacts/: __init__.py  allocator.py  render_contracts.py  renderers.py  validator.py
lantern/authoring_contracts/: allowed_change_surface_flexibilization.md  change_increment_authoring_guide.md  change_increment_authoring_guide_v0.2.1.md  change_increment_selection_guide_v0.2.1.md  change_intention_refinement_guide_v0.2.1.md  design_baseline_authoring_guide_v0.1.0.md  design_candidate_authoring_guide_v0.1.0.md  design_candidate_selection_guide_v0.1.0.md  dip_authoring_guide_v0.1.0.md  test_definition_authoring_guide_v0.1.0.md
lantern/bootstrap/: __init__.py  manager.py
lantern/cli/: __init__.py  (+4 more)
scripts/: __init__.py  add_license.py  build_runtime_release.py  check_artifact_hygiene.py  check_license_headers.py  check_repo_hygiene.py  check_version_alignment.py  generate_license_report.py  generate_sbom.py  install_git_hooks.sh  smoke_test_installed_package.py
tests/: conftest.py  test_ch0027_grammar_lifecycle.py  test_cli_surface.py  test_contract_catalog.py  test_contract_corpus_preservation.py  test_gt115_surface_contract.py  test_gt120_gt130_surface_contract.py  test_guide_consistency.py  test_intervention_restrictions.py  test_mcp_mutation.py  test_mcp_server.py  test_name_isolation.py  test_packaging_ch0012.py  test_packaging_ch0025.py  test_posture_validation.py  test_skill_generation.py  test_transaction_journal.py  test_workbench_registry.py  test_workflow_loader.py  test_workflow_overrides.py  test_workflow_resolver.py
tools/: allocate_lantern_id.py
(+113 files in other folders)
